rspec-tools/tests/resources/invalid-rules/S200/common/rule.adoc
== Why is this an issue?
== Resources
